--- a/src/components/collapse/_collapse.scss
+++ b/src/components/collapse/_collapse.scss
@@ -46,7 +46,8 @@
     overflow: hidden;
     max-height: 0;
     opacity: 0;
-    transition: all 0.5s ease;
+    transition: max-height 0.5s ease, opacity 0.5s ease; // Smooth transition for content visibility
+
     
     p {
         margin-bottom: 0; 
@@ -54,11 +55,13 @@
     }
 
     &_content_visible {
-      animation: fadeInExpand 0.5s forwards; // Use forwards to maintain the final state
+      max-height: 1000px; 
+      opacity: 1;
     }
   
     &_content_hidden {
-      animation: fadeOutCollapse 0.5s forwards;
+      max-height: 0;
+      opacity: 0;
     }
 
     .rotated {
@@ -82,28 +85,6 @@
     }
 }
  
-
-@keyframes fadeInExpand {
-  0% {
-    max-height: 0;
-    opacity: 0;
-  }
-  100% {
-    max-height: 1000px; 
-    opacity: 1;
-  }
-}
-
-@keyframes fadeOutCollapse {
-  0% {
-    max-height: 1000px; 
-    opacity: 1;
-  }
-  100% {
-    max-height: 0;
-    opacity: 0;
-  }
-}
 
     @media (max-width: 760px) {
 
