--- a/src/components/error/_error_comp.scss
+++ b/src/components/error/_error_comp.scss
@@ -20,7 +20,7 @@
   
     .lien-home {
       display: block;
-      margin-top: 100px;
+      margin: 20%;
       color: $color-secondary;
     }
   
